2007-11-30  Hynek Hanke  <hanke@syrr.buchal.name>

	* INSTALL: Added Pulse Audio.

	* ANNOUNCE: Added information about default access
	restrictions. Architecture details taken out. Minor
	details.

2007-11-26  Hynek Hanke  <hanke@homer.brailcom.xx>

	* src/modules/module_utils.c: Typo.

2007-11-26  Hynek Hanke  <hanke@syrr.buchal.name>

	* INSTALL: Example of server_access_list for Festival.

	* src/modules/module_utils.c (module_parent_dp_write): %d -> %ld
	for size_t argument.
	(module_strip_ssml): Convert &amp; entity back to '&'.

	* src/modules/festival.c: %d -> %ld for size_t argument.

	* src/modules/module_utils.c (module_strip_ssml): Escape ampersound
	SSML entity.

	* src/server/Makefile.am (AM_CFLAGS): Removed MODULECONFDIR.

	* config/speechd.conf.in: Default output module is espeak.

	* version.sh: Version incremented to 0.6.5rc1

	* src/server/module.c (load_output_module): Construct path to
	module config files from SpeechdOptions.conf_dir.

	* configure.in (modulebindir): MODULECONFDIR definition modified.

	* src/server/speechd.c (main): Only set SpeechdOptions.conf_dir to default
	if it was not set by the user via command line.

	* src/server/options.c (options_print_help): -C changed
	from config-file to config-dir.

	* config/speechd.conf.in: LocalhostAccessOnly option
	and its description.
	Removed MaxHistoryMessages and SoundDataDir (obsolete).

2007-11-23  Hynek Hanke  <hanke@brailcom.org>

	* src/server/speechd.h (SpeechdOptions): New members: conf_dir,
	home_speechd_dir, log_dir.

	* src/server/speechd.c (speechd_options_init): Initialize
	home_speech_dir and log_dir.
	(speechd_init): Construct log_dir and initialize logging.
	(logging_init): New function
	(main): Decide where to place PID file (.speech-dispatcher/pid/,
	PIDPATH or user specified option). Create the pid/ directory
	in ~/.speech-dispatcher if it doesn't exist.

	* src/server/module.c (load_output_module): Handle module